# flatcam_pcb_maker

./: .gitignore  CMakeLists.txt  Makefile  README.md  app_version.h  bed_leveling.c  bed_leveling.h  bitmap.c  bitmap.h  checklist.c  checklist.h  common.h  dialog.c  dialog.h  eagle_board_parser.c  eagle_board_parser.h  file_utils.c  file_utils.h  flatcam_generator.c  flatcam_generator.h  gcode_modifier.c  gcode_modifier.h  gcode_modifier_line_mapper.c  gcode_modifier_line_mapper.h  gnd_pads.c  gnd_pads.h  local_settings.h.example  main.c  make_windows.cmd  release.sh  screen.c  screen.h  terminal_utils.c  terminal_utils.h  utils.c  utils.h
gcode/: gcode_modifier.c  gcode_modifier.h  gcode_modifier_line_mapper.c  gcode_modifier_line_mapper.h  gnd_pads.c  gnd_pads.h
leveling/: bed_leveling.c  bed_leveling.h  height_calculation.c  height_calculation.h  heightmap_image.c  heightmap_image.h  leveling_utils.c  leveling_utils.h  utils_color.c  utils_color.h
printer/: auto_leveling.c  auto_leveling.h  printer.c  printer.h  serial.c  serial.h
